fixed: you can end and startdate can now overlap

--- a/includes/modules/bookings/css/bookings.scss
+++ b/includes/modules/bookings/css/bookings.scss
@@ -26,13 +26,13 @@
         }
     }
 
-    .selected{
+    .booked{
         cursor: pointer;
     }
 }
 
 .calendar.day{
-    &:not(.selected, .startdate, .enddate, .unavailable):hover, &.inbetween{
+    &.available:not(.unavailable, .inbetween, .startdate, .enddate):hover, &.inbetween{
         background-color: $primary_color;
         color: white;
         border-radius: 30px;
@@ -57,7 +57,7 @@
         opacity: 0.7;
     }
 
-    .selected{
+    .booked{
         cursor: pointer;
     }
 }
@@ -91,7 +91,7 @@ button.change-booking-date{
     font-weight: 400 !important;
 }
 
-.selected{
+.booked{
     color: rgb(176, 176, 176) !important;
     font-weight: 400 !important;
 
